# picomatch

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  api-mapping.md  build.py  dependency-analysis.md  divergences.md  port-checklist.md  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: index.rst  matching.rst  options.rst  placeholder.rst  scan-parse.rst
docs/sphinx/examples/: basic-match.rst  index.rst  planned.rst  scan-pattern.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: dotfiles.rst  index.rst  planned.rst  scan-patterns.rst  windows-separators.rst
docs/sphinx/tutorials/: index.rst  match-source-files.rst  planned.rst
examples/: basic_match.cpp  scan_pattern.cpp
include/polycpp/picomatch/: picomatch.hpp
include/polycpp/picomatch/detail/: aggregator.hpp
src/: picomatch.cpp
tests/: test_smoke.cpp
